--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
 <h1>Citation de Chuck Norris</h1>
-<div id="quote"></div>
-<button onclick="fetchQuote()">Une autre !</button>
-
+<img src="https://static.wikia.nocookie.net/charabattles/images/e/eb/Chuck_norris.jpg/revision/latest?cb=20170412123612&path-prefix=fr" id="chuckImage">
 <div id="quote"></div>
 <button onclick="fetchQuote()">Une autre !</button>
 <button onclick="addFavorite()">Ajouter aux favoris</button>
